# GoogleTest_Practice

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-ubuntu.yml
include/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.hpp  Queue.cpp  Queue.hpp
tests/: CMakeLists.txt  QueueTestFixture.cpp  QueueTestFixture.hpp  basic_tests.cpp  fixtures_tests.cpp
